# painlessmeshboost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  nginx.conf
libs/painlessMesh/src/: painlessMeshConnection.cpp
libs/painlessMesh/src/painlessmesh/: mesh.hpp  plugin.hpp
src/: Arduino.h  main.cpp
